--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>
             botton
         </title>
-        <link rel="stylesheet" href="styl.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="btn">
